--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -6,6 +6,12 @@
         <span><a href="/post/{{id}}">{{title}}</a></span><span style="float:right">Posted by {{user.username}} on {{created_at}}</span><br>
         <span style="float:right">{{comments.length}} comment(s)</span>
       </div>
+      {{!-- <div class="meta">
+        Posted by {{user.username}} on
+        {{created_at}}
+        |
+        <a href="/post/{{id}}">{{comments.length}} comment(s)</a>
+      </div> --}}
       <div class = "content">
           <p>{{post_text}}</p>
       </div>
