--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -15,6 +15,7 @@
         <a href="/">Tech Blog</a>
       </h1>
       <nav>
+        <button id="logout" class="btn-no-style">logout</button>
         <a href="/login">login</a>
       </nav>
     </header>
@@ -25,6 +26,8 @@
       Stay a while
     </footer>
   </div>
+
+<script src="/javascript/logout.js"></script>
 
 </body>
 
