--- a/views/single-post.handlebars
+++ b/views/single-post.handlebars
@@ -1,33 +1,18 @@
-<article class="post">
-    <div class="title">
-    <span>{{post.title}}</span><span style="float:right">Posted by {{post.user.username}} on {{post.created_at}}</span><br>
-    </div>
-    <div class = "content">
-        <p>{{post.post_text}}</p>
-    </div>
-</article>
+{{> post-info post}}
 
+{{#if loggedIn}}
 <form class="comment-form">
   <div>
     <textarea name="comment-body"></textarea>
   </div>
-
   <div>
     <button type="submit">add comment</button>
   </div>
 </form>
+{{/if}}
 
-<div class="comments">
-  {{#each post.comments}}
-  <section class="comment">
-    <div class="meta">
-      {{user.username}} on {{created_at}}
-    </div>
-    <div class="text">
-      {{comment_text}}
-    </div>
-  </section>
-  {{/each}}
-</div>
+{{> comments post.comments}}
 
+{{#if loggedIn}}
 <script src="/javascript/comment.js"></script>
+{{/if}}
