--- a/views/edit-post.handlebars
+++ b/views/edit-post.handlebars
@@ -8,7 +8,7 @@
       <input name="post-title" type="text" value="{{post.title}}" />
     </div>
     <div>
-      <input name="post-text" value="{{post.post_text}}" />
+      <textarea name="post-text">{{post.post_text}}</textarea>
     </div>
     <div>
       Posted by you on {{format_date post.created_at}}
