update the footer

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -27,7 +27,7 @@
       {{{ body }}}
     </main>
     <footer>
-      Stay a while
+      Stay a while, hopefully you leave with a smile!
     </footer>
   </div>
 
